Fix chef image not showing error

--- a/src/website.css
+++ b/src/website.css
@@ -13,7 +13,7 @@
   margin: 0;
 }
 body {
-  background-image: url("./images/background.jpg");
+  background-image: url("../dist/images/background.jpg");
   background-size: cover;
 }
 html,
